# midas

./: .env.example  .gitignore  .shipvitals-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GITHUB_SETUP.md  LICENSE  Launch MIDAS.bat  Launch MIDAS.command  PUSH_TO_GITHUB.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SEO_REPORT.md  SUPPORT.md  TRANSPARENCY.md  launch-midas.sh  pyproject.toml
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: a11y.yml  ci.yml  codeql.yml  cross-platform.yml  lighthouse.yml
agent/: system-prompt.md
config/: policy.yml  providers.example.yml
docs/: ARCHITECTURE.md  CHANNELS.md  COMPARISON.md  INSTALL_FOR_EVERYONE.md  NAMING.md  RECEIPT_V1.md  RECIPES.md  ROADMAP.md  SCORING.md  SECURITY.md  SECURITY_RELEASE_NOTES.md  THREAT_MODEL.md  UAT_CHECKLIST.md
docs/demos/: 01_verifiable_execution.md  02_approval_default.md  03_local_first.md
docs/launch/: AUDIT_8_5.md  REDDIT_LOCALLAMA.md  RELEASE_NOTES_INITIAL.md  SHOW_HN.md  TWITTER.md
memory/: DECISIONS.md
src/midas/: __init__.py
src/midas/core/: __init__.py
src/midas/flagship/: __init__.py  autoskills.py  capabilities.py  channel_settings.py  chat.py  chat_sessions.py  cli.py  market.py  multimodal.py  obsidian.py  onboard.py  outcomes.py  personas.py  proof_link.py  provider_defaults.py  provider_settings.py  replay.py  roi.py  runtime.py  schedule.py  scheduled_posts.py  signed_skills.py  skills.py  stripe_webhook.py  voice.py
tests/fixtures/: fake_mcp_server.py  mcp_client_probe.py  receipts_v1_vector.jsonl
tests/security/: test_code_isolation.py  test_exhaustive_invariants.py  test_fsguard.py  test_injection_exfil.py  test_mcp_gating.py
tests/unit/: test_affiliate.py  test_agent_loop.py  test_agent_loop_wired.py  test_agent_tools_artifact.py  test_agent_tools_code.py  test_agent_tools_fs.py  test_agent_tools_sheet.py  test_agents.py  test_approvals.py  test_artifacts_api.py  test_asset_documents.py  test_assets.py  test_autoskills.py  test_blog_seo.py  test_budget.py  test_cache.py  test_capabilities_endpoint.py  test_cash_loop.py  test_cash_ops_tools.py  test_cash_tools.py  test_channels_all.py  test_channels_api.py  test_chat_action_block.py  test_chat_api.py  test_chat_sessions.py  test_cli.py  test_code_complex.py  test_code_edit.py  test_config.py  test_context_economy.py  test_course.py  test_dashboard_api.py  test_dashboard_auth.py  test_dashboard_events.py  test_dashboard_security.py  test_dashboard_spa.py  test_discover.py  test_do_mode_api.py  test_email_deliverability.py  test_email_inbox.py  (+58 more)
tools/: capture_screenshots.py  make_social_preview.py  record_demo.md
tools/verify/: README.md  pyproject.toml
tools/verify/midas_verify/: __init__.py  __main__.py  verify.py
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/components/: AppShell.tsx  PagePlaceholder.tsx
web/src/lib/: api.test.ts  (+2 more)
(+170 files in other folders)
